--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,3 +5,8 @@ on: pull_request
 jobs:
   call-workflow:
     uses: ./.github/workflows/reuseable-workflow.yaml
+    with:
+      name: "test"
+      age: 18
+    secrets:
+      TOKEN: ${{ secrets.USER_PASSWORD }}
