--- a/.github/workflows/reuseable-workflow.yaml
+++ b/.github/workflows/reuseable-workflow.yaml
@@ -20,7 +20,9 @@ on:
 jobs:
   job:
     runs-on: aliyun
+    outputs:
+      person_info: ${{ steps.person_info.outputs.person_info }}
     steps:
       - name: person_info job
         id: person_info
-        run: echo "person_info = ${{ inputs.name }} - ${{ inputs.age }}" >> $GITHUB_OUTPUT
+        run: echo "person_info=${{ inputs.name }} - ${{ inputs.age }}" >> $GITHUB_OUTPUT
