--- a/.github/workflows/reuseable-workflow.yaml
+++ b/.github/workflows/reuseable-workflow.yaml
@@ -25,4 +25,4 @@ jobs:
     steps:
       - name: person_info job
         id: person_info
-        run: echo "person_info={name:1}" >> $GITHUB_OUTPUT
+        run: echo "person_info={name:${{ inputs.name }}}" >> $GITHUB_OUTPUT
