--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -13,7 +13,7 @@ jobs:
     needs: call-workflow
     runs-on: aliyun
     env:
-      INFOA: ${{ needs.call-workflow.outputs.person_info }}
+      INFOA: ${{ fromJSON(needs.call-workflow.outputs.person_info) }}
     steps:
       - id: info
         run: echo $INFOA
