--- a/.github/workflows/reuseable-workflow.yaml
+++ b/.github/workflows/reuseable-workflow.yaml
@@ -21,7 +21,7 @@ jobs:
   job:
     runs-on: aliyun
     outputs:
-      person_info: ${ {fromJSON(steps.person_info.outputs.person_info) }}
+      person_info: ${{ steps.person_info.outputs.person_info }}
     steps:
       - name: person_info job
         id: person_info
