--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -13,7 +13,7 @@ jobs:
     needs: call-workflow
     runs-on: aliyun
     env:
-      INFOAB: ${{ fromJSON(needs.call-workflow.outputs.person_info) }}
+      INFOAB: ${{ toJSON(needs.call-workflow.outputs.person_info) }}
     steps:
       - id: info
         run: echo $INFOAB
