--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -16,4 +16,4 @@ jobs:
       INFOAB: ${{ fromJSON(toJSON(needs.call-workflow.outputs.person_info)) }}
     steps:
       - id: info
-        run: echo $INFOAB
+        run: echo $INFOAB.name
