--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -13,7 +13,7 @@ jobs:
     needs: call-workflow
     runs-on: aliyun
     env:
-      INFOAB: ${{ toJSON({name: "GitHub", features: ["actions", "reusable"]}) }}
+      INFOAB: ${{ toJSON({name: "GitHub") }}
     steps:
       - id: info
         env:
