--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -13,9 +13,7 @@ jobs:
     needs: call-workflow
     runs-on: aliyun
     env:
-      INFOAB: ${{ toJSON({name: "GitHub") }}
+      INFOAB: ${{ fromJSON(needs.call-workflow.outputs.person_info) }}
     steps:
       - id: info
-        env:
-          DATA: ${{ env.INFOAB.name}}
         run: echo $INFOAB
