--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -13,7 +13,7 @@ jobs:
     # needs: call-workflow
     runs-on: aliyun
     env:
-      DATA: ${{ fromJSON('[{"name":"xxx"}, {"name":"yyy"}]') }}
+      DATA: ${{ fromJSON('[{"name":"xxx"}, {"name":"yyy"}]').*.name }}
     steps:
       - id: info
         run: echo $DATA
