--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -12,6 +12,8 @@ jobs:
   call-workflow-outputs:
     # needs: call-workflow
     runs-on: aliyun
+    env:
+      D1: ${{ fromJSON('[1,2]') }}
     steps:
       - id: info
-        run: echo "${{ fromJSON('[1,2]') }}"
+        run: echo $D1
