--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -9,7 +9,9 @@ jobs:
       dataSource: ${{ steps.get_data.outputs.dataSource }}
     steps:
       - id: get_data
-        run: echo "dataSource={\"name\": \"test\"}" >> $GITHUB_OUTPUT
+        run: |
+          JSON_DATA='{"name": "test"}'
+          echo "dataSource=${JSON_DATA}" >> $GITHUB_OUTPUT
 
   job2:
     runs-on: aliyun
