--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - id: get_data
         run: |
-          JSON_DATA='{"name": "test"}'
-          echo "dataSource=${JSON_DATA}" >> $GITHUB_OUTPUT
+          JSON_DATA=''
+          echo "dataSource={"name": "test"}" >> $GITHUB_OUTPUT
 
   job2:
     runs-on: aliyun
