--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - id: get_data
         run: |
-          JSON_DATA={"name":"test"}"
-          echo "dataSource=${{ toJSON(JSON_DATA) }}" >> $GITHUB_OUTPUT
+          JSON_DATA="{\"name\":\"test\"}"
+          echo "dataSource=$JSON_DATA" >> $GITHUB_OUTPUT
 
   job2:
     runs-on: aliyun
