--- a/.github/workflows/reuseable-workflow.yaml
+++ b/.github/workflows/reuseable-workflow.yaml
@@ -16,13 +16,14 @@ on:
     outputs:
       person_info:
         description: "person info"
-        value: ${{ jobs.job.outputs.person_info }}
+        value: ${{ jobs.generate_person_info.outputs.person_info }}
 jobs:
-  job:
+  generate_person_info:
     runs-on: aliyun
     outputs:
-      person_info: ${{ steps.person_info.outputs.person_info }}
+      person_info: ${{ steps.person_info_step.outputs.person_info }}
     steps:
-      - name: person_info job
-        id: person_info
-        run: echo "person_info={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
+      - id: person_info_step
+        run: |
+          INFO = "{\"name\":\"${{ inputs.name }}\",\"age\":${{ inputs.age }}}"
+          echo "person_info=$INFO" >> $GITHUB_OUTPUT
