--- a/.github/workflows/reuseable-workflow.yaml
+++ b/.github/workflows/reuseable-workflow.yaml
@@ -25,5 +25,5 @@ jobs:
     steps:
       - id: person_info_step
         run: |
-          INFO = "{\"name\":\"${{ inputs.name }}\",\"age\":${{ inputs.age }}}"
-          echo "person_info=$INFO" >> $GITHUB_OUTPUT
+          INFO_DATA = "{\"name\":${{ inputs.name }},\"age\":${{ inputs.age }}}"
+          echo "person_info=$INFO_DATA" >> $GITHUB_OUTPUT
