--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -14,3 +14,5 @@ jobs:
     needs: call-workflow
     steps:
       - run: echo "${{ toJSON(fromJSON(needs.call-workflow.outputs.person_info)) }}"
+
+# test
