--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -14,4 +14,5 @@ jobs:
       image: alpine:latest
     steps:
       - run: cat /etc/os-release
-      - run: ping mysql
+      - run: apk add mysql-client
+      - run: mysql -h mysql -u root -ppassword -e "SELECT 1"
