--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,5 +5,7 @@ on: pull_request
 jobs:
   job:
     runs-on: aliyun
+    container:
+      image: ubuntu:latest
     steps:
       - run: echo 'Hello, world!!'
