--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -6,6 +6,13 @@ jobs:
   job:
     runs-on: aliyun
     container:
-      image: nginx
+      image: docker:dind
     steps:
-      - run: curl http://localhost:8080
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build
+        run: npm run build
+      - name: Build Docker Image
+        run: docker build -t my-web-app .
+      - name: List images
+        run: docker images
