--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -7,10 +7,11 @@ jobs:
     runs-on: aliyun
     container:
       image: docker:28.2.2-dind-alpine3.22
+      options: --privileged
     steps:
-      - name: Docker Pull
+      - name: OS Info
         run: cat /etc/os-release
-      - name: Test
+      - name: Docker Version
         run: docker -v
       - name: Docker List
         run: docker ps & docker images
