--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -11,7 +11,5 @@ jobs:
     steps:
       - name: OS Info
         run: cat /etc/os-release
-      - name: Docker Version
-        run: docker -v
-      - name: Docker List
-        run: docker ps & docker images
+      - name: Docker Info
+        run: docker info
