--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -8,7 +8,7 @@ jobs:
     container:
       image: docker:28.2.2-dind-alpine3.22
       volumes:
-        - /var/lib/docker.sock:/var/lib/docker.sock
+        - /var/lib/docker.sock:/var/lib/docker.so
       options: --privileged
     steps:
       - name: OS Info
