--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -7,9 +7,8 @@ jobs:
     runs-on: aliyun
     container:
       image: docker:28.2.2-dind-alpine3.22
-      volumes:
-        - /var/lib/docker.sock:/var/lib/docker.so
-      options: --privileged
+      options:
+        --privileged
     steps:
       - name: OS Info
         run: cat /etc/os-release
