--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -7,6 +7,8 @@ jobs:
     runs-on: aliyun
     container:
       image: docker:28.2.2-dind-alpine3.22
+      volumes:
+        - /var/lib/docker.sock:/var/lib/docker.sock:ro
     steps:
       - name: OS Info
         run: cat /etc/os-release
