--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,6 +5,8 @@ on: pull_request
 jobs:
   build:
     runs-on: aliyun
+    container:
+      image: ubuntu:latest
     services:
       dind:
         image: docker:dind
