--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Docker
         run: |
           apt-get update
-          apt-get install -y docker.io
+          apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
       - name: Test Docker
         run: |
           docker version
