--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -10,11 +10,26 @@ jobs:
     steps:
       - name: Prepare
         run: |
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-      - name: Install Docker
-        run: |
-          apt-get update
-          apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+# 更新包索引并安装依赖
+          apt-get update && apt-get install -y \
+            ca-certificates \
+            curl \
+            gnupg \
+            lsb-release
+
+# 添加 Docker 官方 GPG 密钥
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | \
+              gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+
+# 设置稳定版仓库
+            echo \
+              "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+              $(lsb_release -cs) stable" | \
+              tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+            # 安装 Docker CLI
+            apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
       - name: Test Docker
         run: |
           docker version
