--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -6,9 +6,7 @@ jobs:
   job:
     runs-on: aliyun
     container:
-      image: docker:dind
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock  # 关键挂载
+      image: nginx:latest
     steps:
-      - name: Docker Info
-        run: docker info
+      - name: rq
+        run: curl -I http://localhost
