--- a/.github/workflows/workflow-demo.yaml
+++ b/.github/workflows/workflow-demo.yaml
@@ -5,8 +5,12 @@ on: pull_request
 jobs:
   job:
     runs-on: aliyun
-    container:
-      image: ubuntu:latest
     steps:
-      - name: rq
+      - name: greeting
         run: echo "Hello, World!"
+      - name: ls
+        run: |
+          ls /_work
+          ls /_work/_temp
+
+
